samples/_failures_safe/1761148062_218848_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fecbefdb.c: In function ‘next_token’:
./samples/SAFE/__tmp_fecbefdb.c:146:23: error: ‘TO’ undeclared (first use in this function)
  146 |         token->type = TO
      |                       ^~
./samples/SAFE/__tmp_fecbefdb.c:146:23: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fecbefdb.c:146:25: error: expected ‘;’ at end of input
  146 |         token->type = TO
      |                         ^
      |                         ;
./samples/SAFE/__tmp_fecbefdb.c:146:9: error: expected declaration or statement at end of input
  146 |         token->type = TO
      |         ^~~~~
./samples/SAFE/__tmp_fecbefdb.c:146:9: error: expected declaration or statement at end of input
